Fixed overlap spacing poblem in narrow window

--- a/RecommendedAndroidApp/css/general.css
+++ b/RecommendedAndroidApp/css/general.css
@@ -7,15 +7,13 @@ html, body, div, header, nav, section, article, aside{
 html{
 	font-family: 'Roboto';
 	height:100%;
-	min-height:300px;
-	min-width:700px;
+	min-height:443px;
 }
 body{
 	position:relative;
 	top:0px;
 	height:100%;
-	min-height:300px;
-	min-width:700px;
+	min-height:443px;
 }
 
 a,p,h1,h2,h3,h4,h5,h6{
