--- a/RecommendedAndroidApp/css/main.css
+++ b/RecommendedAndroidApp/css/main.css
@@ -1,8 +1,10 @@
 @import url(general.css);
 
+
 #mainContainer{
 	height:100%;
-	min-height:100%;
+	min-height:inherit;
+	
 }
 header{
 	background-color:#96AA39;
@@ -30,12 +32,12 @@ header p{
 	right:0;
 	left:0;
 	bottom:33px;
+	min-width:inherit;
 	width:100%;
 }
 #Navigation{
 	float:left;
-	min-width:250px;
-	width:20%;
+	width:255px;
 	height:100%;
 	background-color:#333;
 	color:#FFF;
@@ -65,11 +67,16 @@ li:hover{
 }
 #contentFrame{
 	position:absolute;
+	left:255px;
 	height:100%;
-	width:80%;
-	min-width::300px;
-	left:20%;
-	
+	/* Standard */
+	width:calc(100% - 255px);
+	/* Firefox */
+	width:-moz-calc(100% - 255px);
+	/* WebKit */
+	width:-webkit-calc(100% - 255px);
+	/* Opera */
+	width:-o-calc(100% - 255px);
 }
 iframe{
 	width:100%;
